# personal-knowledge-rag

./: .gitignore  README.md  index_docs.py  justfile  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.opencode/: .gitignore  AGENTS.md  package-lock.json
.opencode/config/agents/: bash-agent.jsonc
