[project]
name = "personal-knowledge-rag"
version = "0.1.0"
description = "RAG for feeding my Obsidian Vault and other MD files to an LLM."
authors = [
    {name = "fizbee11",email = "fizbee11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "unstructured (>=0.23.1,<0.24.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "langchain (>=1.3.11,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "langchain-tools (>=0.1.34,<0.2.0)",
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
